[tool.poetry]
name = "tse-7643"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
librosa = "^0.10.1"
numpy = "^1.26.4"
pandas = "^2.2.0"
torch = "^2.2.1"
torchaudio = "^2.2.1"
tqdm = "^4.66.2"
transformers = "^4.38.1"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
tensorboard = "^2.16.2"
wandb = "^0.16.3"
pillow = "^10.2.0"
torchvision = "^0.17.1"
matplotlib = "^3.8.3"
speechbrain = "0.5.16"
pydantic = "^2.6.4"
lightning = "^2.2.1"
pyloudnorm = "^0.1.1"
schedulefree = "^1.2.5"
ray = {extras = ["tune"], version = "^2.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
